--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -18,10 +18,10 @@ buffer_cpu_only: True # If true we won't keep all of the replay buffer in vram
 
 # --- Logging options ---
 use_tensorboard: False # Log results to tensorboard
-save_model: False # Save the models to disk
-save_model_interval: 250000 # Save models after this many timesteps
-checkpoint_path: "./results/models/qmix_env=8_adam_td_lambda__2021-08-30_11-07-25" # "./results/models/qmix_sc2_clean_corridor" # Load a checkpoint from this path
-evaluate: True # Evaluate model for test_nepisode episodes and quit (no training)
+save_model: True # Save the models to disk
+save_model_interval: 500000 # Save models after this many timesteps
+checkpoint_path: "./results/models/pp_test" # "./results/models/smac_test" # "./results/models/smac_test" # Load a checkpoint from this path
+evaluate: False # Evaluate model for test_nepisode episodes and quit (no training)
 load_step: 0 # Load model trained on this many timesteps (0 if choose max possible)
 save_replay: False # Saving the replay of the model loaded from checkpoint_path
 local_results_path: "results" # Path for local results
@@ -43,9 +43,9 @@ obs_agent_id: True # Include the agent's one_hot id in the observation
 obs_last_action: True # Include the agent's last action (one_hot) in the observation
 
 # --- About Poison ---
-train_poison: False
+train_poison: True
 sc_poison: False
-poison_buffer_rate: 0.05
+poison_buffer_rate: 0.1
 
 # --- Experiment running params ---
 repeat_id: 1
